Fixing a bunch of issues with display setup on mobile.

--- a/css/styles.css
+++ b/css/styles.css
@@ -4,7 +4,9 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  width: 95vw;
+  position: relative;
+  left: 0;
+  width: 75vw;
   margin-top: 4em;
 }
 
@@ -16,26 +18,38 @@
   position: relative;
   bottom: 2.4vh;
   background-color: firebrick;
-  padding: 5vh 35vw 5vh 35vw;
+  padding: 5vh 30vw 5vh 30vw;
+}
+
+.paginating-list-proj .project-title {
+  padding: 5vh 24vw 5vh 24vw;
 }
 
 .skills {
+  position: relative;
+  left: 2em;
   display: flex;
   flex-direction: column;
-  align-items: center;
+  align-items: flex-start;
   justify-content: center;
   text-align: center;
 }
 
-.heading {
+.fa-bootstrap {
   position: relative;
-  left: 2.6em;
-  top: 1em;
-  z-index: 20;
+  right: 0.1em;
 }
 
-.projects {
-  margin-left: 0.8em;
+.fa-html5, .fa-figma {
+  position: relative;
+  left: 0.1em;
+}
+
+.heading {
+  position: relative;
+  left: 1.6em;
+  top: 1em;
+  z-index: 20;
 }
 
 .social {
@@ -55,11 +69,10 @@
 footer {
   position: absolute;
   top: 935vh;
-  margin-left: 2em;
 }
 
 footer h3 {
-  font-size: 8vw;
+  font-size: 7.4vw;
   text-transform: uppercase;
 }
 
@@ -76,22 +89,36 @@ footer h3 {
   font-size: 22px;
 }
 
+.about-txt {
+  width: 82%;
+}
+
 #about {
-  font-size: 28px;
+  font-size: 26px;
 }
 
 .fa-html5, .fa-css3, .fa-js, .fa-sass, .fa-bootstrap, .fa-react, .fa-figma, .fa-github, .fa-python {
-  font-size: 85vw;
+  font-size: 65vw;
 }
 
 .fa-sass {
-  font-size: 78vw;
+  font-size: 52vw;
+}
+
+hr {
+  width: 65vw;
+  position: relative;
+  right: 2.5em;
 }
 
 .project-section-btns {
   display: flex;
+  flex-direction: column;
   align-items: center;
-  justify-content: space-between;
+  justify-content: center;
+  position: relative;
+  top: 0.5em;
+  right: 2.2em;
 }
 
 .all, .personal, .educational {
@@ -102,16 +129,11 @@ footer h3 {
 }
 
 .all, .personal {
-  margin-right: 1em;
-}
-
-.row i {
-  font-size: 15em;
-  margin-bottom: 0.5em;
+  margin-bottom: 3em;
 }
 
 .project-image {
-  width: 92vw;
+  width: 73vw;
   position: relative;
   bottom: 4.54vh;
   border: 6px solid black;
@@ -127,7 +149,7 @@ footer h3 {
   top: -1em;
   right: -100vw;
   height: 104.5vh;
-  width: 50%;
+  width: 33.33%;
   z-index: 400;
   background-color: skyblue;
 }
@@ -149,7 +171,7 @@ footer h3 {
     right: -100vw;
   }
   to {
-    right: -1.3em;
+    right: 4em;
   }
 }
 
@@ -163,12 +185,12 @@ footer h3 {
   position: absolute;
   cursor: pointer;
   top: 0;
-  right: 0;
+  right: 4em;
 }
 
 .mobile-menu-close {
   position: relative;
-  left: 85vw;
+  left: 65vw;
   width: 15%;
   display: none;
   z-index: 430;
@@ -176,7 +198,7 @@ footer h3 {
 
 .nav-show {
   display: flex;
-  right: -1.3em;
+  right: 4em;
 }
 
 .closing {
@@ -185,7 +207,7 @@ footer h3 {
 }
 @keyframes slideout {
   from {
-    right: 0;
+    right: 2em;
   }
   to {
     right: -100vw;
