--- a/scss/components/_buttons.scss
+++ b/scss/components/_buttons.scss
@@ -1,7 +1,11 @@
 .project-section-btns {
     display: flex;
+    flex-direction: column;
     align-items: center;
-    justify-content: space-between;
+    justify-content: center;
+    position: relative;
+    top: 0.5em;
+    right: 2.2em;
 }
 
 .all,.personal,.educational {
@@ -12,5 +16,5 @@
 }
 
 .all,.personal {
-    margin-right: 1em;
+    margin-bottom: 3em;
 }
