--- a/scss/components/_images.scss
+++ b/scss/components/_images.scss
@@ -1,10 +1,5 @@
-.row i {
-    font-size: 15em;
-    margin-bottom: 0.5em;
-}
-
 .project-image {
-    width: 92vw;
+    width: 73vw;
     position: relative;
     bottom: 4.54vh;
     border: 6px solid black;
